
2015-May-04 Struan Robertson

	* MESMER manual.docx: Documentation updates.

2015-May-04 Struan Robertson

	* SensitivityAnalysis.cpp: Improved appearance of data generated for external
	analysis.

2015-May-03 Struan Robertson

	* SensitivityAnalysis.cpp: Fixed incorrect vector allocation that was causing
	a crash.

	* IsomerizationReaction.cpp: Altered calculation of high pressure rate 
	coefficients to improve accuracy.

	* CollisionOperator.cpp: Minor change to data output.
	
	* Update of Win32 QA baselines.	

2015-April-30 Chris Morley

    * src/plugins/ThermodynamicTable.cpp: correct the check for there being
      enough temperature points to fit NASA polynomials.
      
    * mesmer1.xsl: format Cantera thermo in Firefox output for the case
      when there is only one fitted polynomial.

2015-April-28 Struan Robertson

	* Examples.bat/.sh: Update of test shell scripts to include sensitivity analysis
	tests.

2015-April-19 Struan Robertson

	* Marquardt.cpp, FittingUtils.cpp/.h: Removed code duplicate related to gaussian 
	parameter set distribution.

	* SecondOrderAssocReaction.cpp: Altered input so that it now adjusts zero
	point energy of dissociation fragment to reflect second order kinetics.

	* SecondOrderAssocReaction.cpp, MesmerFlags.h/.cpp, CollisionOperator.cpp:
	Added flag to prevent profile calculations for non-linear systems.

2015-April-19 Struan Robertson

	* SensitivityAnalysis.cpp, TMatrix.h: Implementation add to analysis correlated
	parameter input.

2015-April-13 Chris Morley

	* src/main.cpp: add -t and T to online documentation.

	* src/plugins/ExponentialDown.cpp: add "me:deltaEDownTActivation" as a second

	  temperature dependent parameter for deltaEDown.

	* Windows VC12/distribution/NSISScriptToCreateInstaller.nsi: update for v4

	* Windows VC12/distribution/ReadMe.txt: minor text changes

	* src/gDensityOfStates.cpp: add some XML elements used for enthalpy in 
      Openbabel.

2015-April-10 Struan Robertson
